<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/Min"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/seekBar1"
        android:layout_marginTop="21dp"
        android:text="@string/Max"
        android:textSize="25sp" />

	<SeekBar
	    android:id="@+id/seekBar1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_alignTop="@+id/textView1"
	    android:layout_marginLeft="18dp"
	    android:layout_toRightOf="@+id/textView2"
	    android:max="7"
	    android:progress="2" />
    
    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/seekBar1"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/textView2"
        android:max="7"
        android:progress="4" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/GetSchedules" />

    <TextView
        android:id="@+id/viewAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addButton"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignParentRight="true"
        android:text="TextView" />

    <EditText
        android:id="@+id/addClas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_toLeftOf="@+id/addButton"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/getLast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/viewAdd"
        android:layout_below="@+id/addButton"
        android:layout_toRightOf="@+id/button2"
        android:text="Last Schedule" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/addClas"
        android:layout_alignRight="@+id/viewAdd"
        android:text="Add Class" />

    <CheckBox
        android:id="@+id/useDars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/seekBar2"
        android:checked="true"
        android:text="Use DARs report" />

</RelativeLayout>
